--- a/1. Introduction.tex
+++ b/1. Introduction.tex
@@ -6,12 +6,12 @@ This chapter provides an overall picture of the chosen topic for investigation. 
 
 To combat climate change, the production of greenhouse gas emissions must be reduced to significant levels and shift to use of \gls{RES} must be accomplished. In numbers, the European Union's (\gls{EU}) Nationally Determined Contribution (NDC) under the Paris Agreement is to reduce greenhouse gas emissions by at least 40\% by 2030 compared to 1990 \cite{agreement2015unfccc}. 
 
-The plans involve a future target of nearly 70 GW to 150 GW offshore wind power in the North Sea by 2040. A scope of 140 to 450 GW of offshore wind power in the \gls{EU} by 2050 is seen from the latest European Commission situations. Nearly 13 GW of offshore wind capacity was installed in 2018 in the North Sea. Going with the current pace, the rate of offshore wind deployment is deficient in reaching the objectives of the Paris Agreement. To comply with these objectives, an extraordinary jump in offshore wind energy is required, as shown in Figure \ref{fig:Paris_roll_out}. A cost-efficient solution calls for an increase in large scale offshore wind deployment in the North Sea \cite{noauthor_vision_nodate}. As mentioned in \cite{noauthor_tennet_2020}, the Netherlands Transmission System Operator (TSO), TenneT has already entered into an innovation partnership with its suppliers to establish a 2 GW offshore platform to bring in their contribution towards the Paris Agreement. While the requirement for large scale networks is appealing, the technical challenges that could be encountered should also be considered.  
+The plans involve a future target of nearly 70 GW to 150 GW offshore wind power in the North Sea by 2040. A scope of 140 to 450 GW of offshore wind power in the \gls{EU} by 2050 is seen from the latest European Commission situations. Nearly 13 GW of offshore wind capacity was installed in 2018 in the North Sea. Going with the current pace, the rate of offshore wind deployment is deficient in reaching the objectives of the Paris Agreement. To comply with these objectives, an extraordinary jump in offshore wind energy is required, as shown in Figure \ref{fig:Paris_roll_out}. A cost-efficient solution calls for an increase in large scale offshore wind deployment in the North Sea \cite{noauthor_vision_nodate}. As mentioned in \cite{noauthor_tennet_2020}, the Transmission System Operator (TSO) of the Netherlands, TenneT, has already entered into an innovation partnership with its suppliers to establish a 2 GW offshore platform to bring in their contribution towards the Paris Agreement. While the requirement for large scale networks is appealing, the technical challenges that could be encountered should also be considered.  
 
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 7cm]{Diagrams/Chapter_1/Paris_roll_out.PNG}
+    \includegraphics[height = 6.5cm,width = 7cm]{Diagrams/Chapter_1/Paris_roll_out_2.png}
     \caption{Installed wind capacity in the North Sea in GW \cite{noauthor_vision_nodate}}
     \label{fig:Paris_roll_out}
 \end{figure}
@@ -21,17 +21,17 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 3cm,width = 10.5cm]{Diagrams/Chapter_1/Energy_conv_system.pdf}
-    \caption{Conventional generators connection to the grid \cite{denis_migrate_2018}}
-    \label{fig:Energy_conv_system}
+    \includegraphics[height = 3cm,width = 10.5cm]{Diagrams/Chapter_1/Energy_conv_system_2.pdf}
+    \caption{PE converter-based generation connection to the grid \cite{denis_migrate_2018}}
+    \label{fig:Energy_conv_system_2}
 \end{figure}
 \vspace{0mm}
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 3cm,width = 11.5cm]{Diagrams/Chapter_1/Energy_conv_system_2.pdf}
-    \caption{PE converter-based generation connection to the grid \cite{denis_migrate_2018}}
-    \label{fig:Energy_conv_system_2}
+    \includegraphics[height = 3cm,width = 11.5cm]{Diagrams/Chapter_1/Energy_conv_system.pdf}
+    \caption{Conventional generators connection to the grid \cite{denis_migrate_2018}}
+    \label{fig:Energy_conv_system}
 \end{figure}
 
 The first significant challenge is the control of voltage and frequency by the \gls{PE} converters without the presence of conventional units in the grid. The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to faster dynamic behaviour and needs controllers with faster time response. 
@@ -45,7 +45,7 @@ Lastly, the connection of distant Offshore Wind Farms (\gls{OWF}) also creates c
 
 \section{Literature Review}
 
-As seen in Section \ref{Background}, large scale deployment of offshore wind farms are a crucial requirement. So far, for small-sized wind farms, the offshore collector platform that connects all the wind generators and transfers power to the offshore converter station, have only contributed to a small part of the total expenditure. The reason being the \gls{OWF}s mostly have radial collectors. This would not be the case when going for large scale wind farms. The critical area of concern will be the additional costs of subsea cables that require higher ratings and excess lengths \cite{quinonez-varela_electrical_2007}. The upcoming projects plan to have a higher rating of 66 kV compared to the conventional 33 kV \gls{HVAC} transmission due to the advantages of lesser array cabling, higher power transmission, a considerable decrease in capital expenditure and the avoidance of the \gls{AC} collector platform \cite{dnv66kv}. Different large scale topologies are being explored, and the conventional configurations are presented in \cite{guan_novel_2014}. However, the topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the offshore \gls{AC} network directly to the offshore converter station. Such a topology could avoid the need for an offshore \gls{AC} collector platform and bring other benefits such as increased power transfer and reduced array cabling. The techno-economic assessment of such a configuration is depicted in \cite{misyris2020north}. 
+As seen in Section \ref{Background}, large scale deployment of offshore wind farms are a crucial requirement to meet the mentioned targets. So far, for small-sized wind farms, the offshore collector platform that connects all the wind generators and transfers power to the offshore converter station, has only contributed to a small part of the total expenditure. The reason being, the \gls{OWF}s mostly have radial collectors. This would not be the case when going for large scale wind farms. The critical area of concern will be the additional costs of subsea cables that require higher ratings and excess lengths \cite{quinonez-varela_electrical_2007}. The upcoming projects plan to have a higher rating of 66 kV compared to the conventional 33 kV \gls{HVAC} transmission due to the advantages of lesser array cabling, higher power transmission, a considerable decrease in capital expenditure and the avoidance of the \gls{AC} collector platform \cite{dnv66kv}. Different large scale topologies are being explored, and the conventional configurations are presented in \cite{guan_novel_2014}. However, the topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the offshore \gls{AC} network directly to the offshore converter station. Such a topology could avoid the need for an offshore \gls{AC} collector platform and bring other benefits such as increased power transfer and reduced array cabling. The techno-economic assessment of such a configuration is depicted in \cite{misyris2020north}. 
 
 Various control concepts are being explored to mitigate the technical challenges mentioned in the previous section due to the integration of \gls{RES}. Typically, \gls{RES} are connected to the grid for parallel operation using present state of the art technology, i.e. grid following control strategies, in which the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these controllers is that they require an already existing grid voltage. However, the U/F (voltage/frequency) control mode is used for operation in the islanded mode where the voltage is created by the U/F control. The issue concerned with this control is that it is not equipped for the parallel operation of various voltage forming units \cite{weise2019comparison}. New control strategies that can create the grid voltage and work in parallel operation is an emerging area of research. ENTSO-E classifies converters into three classes (Class 1, Class 2 and Class 3) and the converters working with the strategies mentioned above are categorized under Class 3. The complete requirements that need to be complied by such converters are depicted in \cite{christensen2020high}.
 
@@ -68,7 +68,7 @@ The new control strategies available for grid parallel and island operation are 
 
 \section{Objectives and Research Questions}
 The overall goal of the thesis is to implement an enhanced control strategy for wind turbine generators in Voltage Source Converter - High Voltage Direct Current (\gls{VSC}-\gls{HVDC}) systems in \gls{EMT} simulators and to perform analysis on the dynamics of voltage and power flows within a large scale offshore transmission network. Electro-Magnetic Transient (\gls{EMT}) simulation-based software tools are utilized in this thesis to analyze the performance of the developed control models. The thesis makes use of the average model of Type-4 \gls{WG} available in RSCAD as the basis. The \gls{EMT} based simulation interface in DIgSILENT PowerFactory tool is utilized as well. This report provides a detailed description of the different available features in RSCAD that are employed to develop a large scale model. 
-To achieve the overall goal, the following research questions are prepared:
+To achieve the overall goal, the following research questions are defined:
 \begin{itemize}
     \item How effective is the Direct Voltage Control (\gls{DVC}) when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?
     
@@ -84,13 +84,14 @@ To achieve the overall goal, the following research questions are prepared:
 On behalf of the thesis objectives defined above, the methodology followed in this thesis is presented in this section.
 
 \begin{itemize}
-    \item Implementation of the \gls{DVC} in Type-4 \gls{WG} model in RSCAD for an offshore 66 kV \gls{HVAC} network. With proper documentation provided in this report, the developed model can be utilized for future work.
+    \item Implementation of the \gls{DVC} in Type-4 \gls{WG} model in RSCAD for an offshore 66 kV \gls{HVAC} network. With proper documentation provided in this report, the developed 66 kV \gls{HVAC} model in RSCAD can be utilized for future work.
     
-    \item Modelling of a 66 kV \gls{HVAC} network in PowerFactory by adapting the benchmark \gls{DVC} model in Type-4 \gls{WG}s.
+    \item Modelling of a 66 kV \gls{HVAC} network in PowerFactory by adapting the benchmark \gls{DVC} model in Type-4 \gls{WG}s. With proper documentation provided in this report, the developed 66 kV \gls{HVAC} mode in PowerFactory model can be utilized for future work.
     
-    \item Development of a Multi-Gigawatt 66 kV offshore network model with \gls{DVC} implemented in Type-4 \gls{WG}s connected to a 2 GW offshore converter station in RSCAD. 
+    \item Development of a Multi-Gigawatt 66 kV offshore network model with \gls{DVC} implemented in Type-4 \gls{WG}s connected to a 2 GW offshore converter station in RSCAD. With proper documentation provided in this report, the developed 2 GW model in RSCAD can be utilized for future work.
     
-    \item Automation script for the operation of the developed large scale offshore model using the interface between RSCAD and MATLAB is created.
+    \item Automation script for the operation of the developed large scale offshore model using the interface between RSCAD and MATLAB is created. With
+    proper documentation provided in this report, the script can be utilized for future work.
 \end{itemize}
 
 \section{Thesis Outline}
@@ -98,11 +99,11 @@ A brief outline of the main chapters is presented below, and a figurative repres
 \begin{itemize}
     \item Chapter \ref{2}: The chapter presents the concepts of wind energy conversion system and the classification of wind turbines. The overview of the offshore wind farm system with all the major equipment and the latest trend in technology is explained. The issues with the present control structures and the necessity to move towards better control strategies are addressed. A new control structure implemented in this thesis is also formulated.  
     
-    \item Chapter \ref{3}: The implementation of the identified control strategy in \cite{korai_dynamic_2019} and \cite{sethi_real-time_nodate-new} for a 66 kV \gls{HVAC} network model in RSCAD is detailed. The performance of Type-4 \gls{WG} with \gls{DVC}, in terms of reactive current injection, under severe disturbances is analysed. Modelling of a similar 66 kV \gls{HVAC} network in DIgSILENT PowerFactory tool is also addressed. The comparison of the dynamic performance of the \gls{DVC} in two \gls{EMT} platforms (RSCAD and PowerFactory) for a 66 kV \gls{HVAC} offshore network during severe disturbances is carried out. 
+    \item Chapter \ref{3}: The implementation of the identified control strategy in \cite{korai_dynamic_2019} and \cite{sethi_real-time_nodate-new} for a 66 kV \gls{HVAC} network model in RSCAD is detailed. The performance of Type-4 \gls{WG} with \gls{DVC}, in terms of reactive current injection, under severe disturbances is analyzed. Modelling of a similar 66 kV \gls{HVAC} network in DIgSILENT PowerFactory tool is also addressed. The comparison of the dynamic performance of the \gls{DVC} in two \gls{EMT} platforms (RSCAD and PowerFactory) for a 66 kV \gls{HVAC} offshore network during severe disturbances is carried out. 
     
     \item Chapter \ref{4}: The development of a large scale 2 GW offshore network model in RSCAD is detailed. The modifications in the control structures of the \gls{MMC}s to work in coordination with the implemented \gls{DVC} in \gls{WG}s are addressed.
     
-    \item Chapter \ref{5}: The operation of the large scale network is discussed. The interplay of offshore \gls{MMC}s and Type-4 \gls{WG}s in terms of dynamic power flow control within the offshore network (by analysing the voltage and current profiles in the electrical path between the \gls{WG}s and the \gls{MMC}s) is performed. 
+    \item Chapter \ref{5}: The operation of the large scale network is discussed. The interplay of offshore \gls{MMC}s and Type-4 \gls{WG}s in terms of dynamic power flow control within the offshore network (by analyzing the voltage and current profiles in the electrical path between the \gls{WG}s and the \gls{MMC}s) is performed. 
     
     \item Chapter \ref{6}: The significant conclusions for the research questions are provided. The future scope and recommendations are also added.
 \end{itemize}
