--- a/2. Scientific Background.tex
+++ b/2. Scientific Background.tex
@@ -1,5 +1,5 @@
 \chapter{Scientific Background}\label{2}
-An outline of the fundamentals required for this thesis work is presented in this chapter. Firstly, the basics of wind energy conversion system are explained. All components that are a part of an offshore wind farm network are depicted. The conventional control topologies are explained.
+An outline of the fundamentals required for this thesis work is presented in this chapter. Firstly, the basics of wind energy conversion systems are explained. All components that are a part of an offshore wind farm network are depicted. The conventional control topologies are explained.
 
 \section{Wind Energy Conversion Systems (WECS)}\label{WECS_theory}
 The \gls{WECS} is a mixture of different engineering fields such as mechanical, electrical and control systems. The \gls{WECS} consists of several components that convert the kinetic energy of the wind into electrical energy and transfer power efficiently and systematically. The major mechanical equipment in the \gls{WECS} are the turbine tower, nacelle, rotor blades, hub, drives, gearbox, drive-train and mechanical brakes \cite{manwell2010wind}. The power electronic (\gls{PE}) converters, electrical generator, transmission cables, power transformers and transmission towers constitute the electrical part. The control systems \cite{yaramasu_high-power_2015} governs both the electrical and mechanical systems.
@@ -120,10 +120,10 @@ The equivalent circuit in dq0 frame is shown in Figure \ref{fig:PMSG_equiv_ckt}.
 \subsection{Voltage Source Converter (VSC)}\label{VSC_theory}
 The stator of the \gls{PMSG} is connected directly to the \gls{AC} side of a \gls{VSC} as can be seen in Figure \ref{fig:Type4}. This \gls{VSC} which works as a rectifier during generation operation, is termed as Machine Side Converter (\gls{MSC}). It is interfaced back to back with another \gls{VSC} that works as an inverter during generation operation and is called Grid Side Converter (\gls{GSC}).
 
-\gls{VSC} consists of self-commutated switching devices such as the Insulated Gate Bipolar Transistors (\gls{IGBT})s and anti-parallel diodes. It allows for bidirectional flow of power between the \gls{AC} and \gls{DC} sides. The output voltage is obtained by switching off the \gls{IGBT}s. The \gls{VSC}s are classified as two-level (Figure \ref{fig:2levelVSC}) or multi-level (Figure \ref{fig:3levelVSC}) depending on the number of voltage levels they can generate \cite{noauthor_appendix_2014-1}. 
+\gls{VSC} consists of self-commutated switching devices such as the Insulated Gate Bipolar Transistors (\gls{IGBT}s) and anti-parallel diodes. It allows for bidirectional flow of power between the \gls{AC} and \gls{DC} sides. The output voltage is obtained by switching off the \gls{IGBT}s. The \gls{VSC}s are classified as two-level (Figure \ref{fig:2levelVSC}) or multi-level (Figure \ref{fig:3levelVSC}) depending on the number of voltage levels they can generate \cite{noauthor_appendix_2014-1}. 
 
 \subsubsection{Two-level VSC}
-The most commonly used type of converter in various applications because of the simplicity of operation. The configuration of a two-level \gls{VSC} is depicted in Figure \ref{fig:2levelVSC}. Voltages of (1/2 $V_{dc}$, -1/2 $V_{dc}$) can be obtained in two-level \gls{VSC} as shown in the graph in Figure \ref{fig:2levelVSC}. The operation of switches $S_{a1}$ and $S_{a2}$ in two-level \gls{VSC} are complementary to prevent short circuit across the \gls{DC} link and hence protecting the power electronic devices from being subjected to over-current.
+The two-level \gls{VSC} is the most commonly used type of converter in various applications because of the simplicity of operation. The configuration of a two-level \gls{VSC} is depicted in Figure \ref{fig:2levelVSC}. Voltages of (1/2 $V_{dc}$, -1/2 $V_{dc}$) can be obtained in two-level \gls{VSC} as shown in the graph in Figure \ref{fig:2levelVSC}. The operation of switches $S_{1}$ and $S_{2}$ in two-level \gls{VSC} are complementary to prevent short circuit across the \gls{DC} link and hence protecting the power electronic devices from being subjected to over-current.
 
 \begin{figure}[H]
 \centering
@@ -159,7 +159,7 @@ The most commonly used type of converter in various applications because of the 
 \end{table}
 
 \subsubsection{Pulse Width Modulation (PWM)}
-The switching of the valves has to be configured using a control mechanism to ensure proper operation. To reduce the harmonic content and to control the magnitude of output voltage, many Pulse Width Modulation (\gls{PWM}) techniques are developed for this. Few of them that are used as of today are Selective Harmonic Elimination (SHE), Sinusoidal Pulse Width Modulation (SPWM) and Space Vector Modulation (SVM). SPWM technique is employed in this work and is explained further. SPWM is one among the simplest methods to be implemented and provides high effectiveness in modulation by suppressing the harmonic contents that are farther from the fundamental frequency component. SPWM can be termed to be a multi-pulse based modulation technique that changes the pulse width of the output voltage of the converter in a sinusoidal fashion with respect to a corresponding reference voltage. The implementation of this concept is done by comparing a particular reference signal of low-frequency with a carrier signal of higher frequency. The reference signal frequency is set to the required fundamental frequency, which is normally 50 Hz or 60 Hz, and the carrier signal frequency should be higher than the reference signal frequency. An example of SPWM in two-level \gls{VSC} is shown in Figure \ref{fig:2levelVSC_switching}.
+The switching of the valves has to be configured using a control mechanism to ensure proper operation. To reduce the harmonic content and to control the magnitude of output voltage, many Pulse Width Modulation (\gls{PWM}) techniques are developed for this. Few of them that are used as of today are Selective Harmonic Elimination (SHE), Sinusoidal Pulse Width Modulation (SPWM) and Space Vector Modulation (SVM). SPWM technique is employed in this work and is explained further. SPWM is among one of the simplest methods to be implemented and provides high effectiveness in modulation by suppressing the harmonic contents that are farther from the fundamental frequency component. SPWM can be termed to be a multi-pulse based modulation technique that changes the pulse width of the output voltage of the converter in a sinusoidal fashion with respect to a corresponding reference voltage. The implementation of this concept is done by comparing a particular reference signal of low-frequency with a carrier signal of higher frequency. The reference signal frequency is set to the required fundamental frequency, which is normally 50 Hz or 60 Hz, and the carrier signal frequency should be higher than the reference signal frequency. An example of SPWM in two-level \gls{VSC} is shown in Figure \ref{fig:2levelVSC_switching}.
 
 \begin{figure}[H]
 \centering
@@ -170,7 +170,7 @@ The switching of the valves has to be configured using a control mechanism to en
 \end{figure}
 
 \subsubsection{Reference frame transformation}\label{ref_frame_trafo}
-There need to be mechanisms for the control operation of the \gls{VSC}s. \gls{PI} controllers are widely used for control operation in power systems. It is therefore relevant to translate from three-phase abc frame to a rotating dq frame in order to have a two signal representation of three-phase \gls{AC} signals. The Clarke-Parke transformation is used for this purpose, as shown in Figure \ref{fig:DQTransformation}. The three-phase measured signals from the node are translated to a stationary reference frame ($\alpha \beta$) using the Clarke transform. It is then translated to a synchronous rotating reference (dq) frame using the Park transform. The reference signal for control is provided to the corresponding frame, and after the control process is established, it is translated back to the three-phase signals. Generally, in the real scenario, during translation to dq frame, the d-axis is made to align with the voltage of the grid and q-axis is aligned to zero. This approach provides control of active power or \gls{DC} voltage using d-axis current component of the converter, whereas the reactive power or \gls{AC} voltage can be controlled using the q-axis current component of the converter.   
+There need to be mechanisms for the control operation of the \gls{VSC}s. \gls{PI} controllers are widely used for control operation in power systems. It is therefore relevant to translate from three-phase abc frame to a rotating dq frame in order to have a two signal representation of three-phase \gls{AC} signals. The Clarke-Park transformation is used for this purpose, as shown in Figure \ref{fig:DQTransformation}. The three-phase measured signals from the node are translated to a stationary reference frame ($\alpha \beta$) using the Clarke transform. It is then translated to a synchronous rotating reference (dq) frame using the Park transform. The reference signal for control is provided to the corresponding frame, and after the control process is established, it is translated back to the three-phase signals. Generally, in the real scenario, during translation to dq frame, the d-axis is made to align with the voltage of the grid and q-axis is aligned to zero. This approach provides control of active power or \gls{DC} voltage using d-axis current component of the converter, whereas the reactive power or \gls{AC} voltage can be controlled using the q-axis current component of the converter.   
 
 \begin{figure}[H]
 \centering
@@ -219,7 +219,7 @@ By far, the conventional current control explained above has not led to any majo
 
 
 \subsubsection{Direct Voltage Control (DVC)}\label{DVC_theory}
-The conventional control scheme shown in Figure \ref{fig:Diss_GSC_control} is modified as shown in Figure \ref{fig:Diss_DVC_control}. The major issue with classical control is the wind up of the integrator that causes the voltage to rise. This happens because the reference value of current remains non-zero and the measured current following islanding falls to nearly zero, and this causes the integrator to wind-up. This problem is resolved in the new control scheme by avoiding the integrator term and moving the proportional term to the output end, as shown in Figure \ref{fig:Diss_DVC_control}. The issue then would be that the set points would be different without the presence of the integral component. The main role of set points is to limit the \gls{PE} converter current. Nevertheless, the current limitation would be based on the grid situation, and hence the performance of the controller is not affected in the absence of the integral component. The control strategy also utilizes a wash-out filter that controls the effect of this change during dynamic actions \cite{erlich_new_2017}, \cite{korai_dynamic_2019}.         
+The conventional control scheme shown in Figure \ref{fig:Diss_GSC_control} is modified as shown in Figure \ref{fig:Diss_DVC_control}. The major issue with classical control is the wind up of the integrator that causes the voltage to rise. This happens because the reference value of current remains non-zero and the measured current following islanding falls to nearly zero, and this causes the integrator to wind-up. This problem is resolved in the new control scheme by avoiding the integrator term and moving the proportional term to the output end, as shown in Figure \ref{fig:Diss_DVC_control}. The issue then would be that the set points would be different without the presence of the integral component. The main role of set points is to limit the \gls{PE} converter current. Nevertheless, the current limitation would be based on the grid situation, and hence the performance of the controller is not affected in the absence of the integral component. The control strategy also utilizes a wash-out filter that controls the effect of this change during dynamic actions \cite{korai_dynamic_2019}, \cite{erlich_new_2017}.         
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
@@ -249,7 +249,7 @@ The power balance equation at the \gls{WG} is given as follows:
 where \gls{MSC} is the rectifier and \gls{GSC} is the inverter. For steady-state conditions, the voltage across the \gls{DC} capacitance is steady. Thereby, the active power input for the inverter (\gls{GSC}) equals the active power output from the rectifier (\gls{MSC}). During the fault condition, the active power output from the inverter is decreased, whereas the output from the rectifier tends to be the same. The capacitors are charged during this scenario, and the \gls{DC} link voltage increases to maintain the power balance. 
 
 \section{High Voltage Direct Current (HVDC) Transmission}\label{HVDC_trans_theory}
-As the name suggests, a High Voltage Direct Current (\gls{HVDC}) transmission system uses \gls{DC} for bulk transmission of electrical power. The electrical power from the offshore \gls{AC} network is stepped-up using a power transformer and is converted to \gls{DC} at the converter station which is transmitted to onshore locations using subsea cables or overhead lines \cite{abbreviewnew}. The commercial utilization of \gls{HVDC} transmission was started in 1954 \cite{cigre2005b4}, \cite{peake_history_2010}. The \gls{HVDC} technology employ \gls{VSC}s to convert power from \gls{AC} to \gls{DC} and vice versa as explained in Section \ref{VSC_theory} and hence the systems that employ this technology are termed as \gls{VSC}-\gls{HVDC} systems.
+As the name suggests, a High Voltage Direct Current (\gls{HVDC}) transmission system uses \gls{DC} for bulk transmission of electrical power. The electrical power from the offshore \gls{AC} network is stepped-up using a power transformer and is converted to \gls{DC} at the converter station which is transmitted to onshore locations using subsea cables or overhead lines \cite{abbreviewnew}. The commercial utilization of \gls{HVDC} transmission was started in 1954 \cite{cigre2005b4}, \cite{peake_history_2010}. The \gls{HVDC} technology employs \gls{VSC}s to convert power from \gls{AC} to \gls{DC} and vice versa as explained in Section \ref{VSC_theory} and hence the systems that employ this technology are termed as \gls{VSC}-\gls{HVDC} systems.
 
 As seen in Section \ref{VSC_theory}, the classification for \gls{VSC}s can be termed as two-level and multi-level. The two-level \gls{VSC}s are an economical solution for low power rating applications up to 1 MVA. The main drawbacks of two-level \gls{VSC}s include increased power losses, high harmonic content on the \gls{AC} side voltages and require expensive filters to mitigate the harmonics. On the other hand, multi-level converters provide notable improvements for the above mentioned issues as can be seen in Figure \ref{fig:2levelVSCtoMMC} \cite{sharifabadi2016design}.   
 
