--- a/preface.tex
+++ b/preface.tex
@@ -1,22 +1,31 @@
-
+\begin{comment}
 \chapter*{Acknowledgement}
 \setheader{Preface}
+There are many people to thank for the successful completion of this project. Firstly, I would like to thank Dr. Jose Rueda Torres for providing me this opportunity to work on such an interesting topic and guiding me throughout the research. His inputs and suggestions throughout the thesis have been extremely valuable. All the constructive criticisms have contributed to developing me as a good researcher and a good human being. I also would like to thank Prof. Mart van der Meijden for his suggestions and constant support through several meetings. He has always taken keen interest in letting me develop my skills and made me aware of the bigger picture of the work I was doing. I am incredibly thankful to both my supervisors for their support and goodwill during this thesis. 
 
+
+I would like to extend my thanks to Arcadio Perilla for kindly consenting to be a part of my defense committee.
+I cannot thank enough my daily supervisor İlker Tezsevin. He has been a constant support and a pillar of strength throughout my thesis project and internship. This thesis would not have been possible without his help and contribution. He has been a great teacher to me from the start of my internship project at DIFFER. His determination and motivation to work have always made an impact on me. I am sure that this learning experience I had from him will be an asset to me. On a lighter note, I will never forget these two things: first, our discussions after coming out of meetings with Suleyman! And his expression whenever I say I have a new idea!
+A huge thanks to the AMD group: Murat Sorkun, Elif Sorkun, Qi Zhang, Xuan Zhou, and Dr. Abishek Khetan at DIFFER. Their inputs and invaluable suggestions on my presentations have been a massive help during my thesis preparations and the poster presentations. A special thanks to Murat for helping me out with my codes. Also, thank you for all the snacks which you people bought for the office. They kept me running during my late working hours at DIFFER.
+I want to thank Nitin Prasad for all his insightful suggestions and discussion during my thesis. Thank you for helping me find answers to the questions I had regarding catalysis. I would also like to thank Dr. Rifat Kamarudheen for all the heated discussions and debates on science, academia, and everything around! I would also like to thank Kiran George and Dr. Vivek Sinha for giving me insights about planning my thesis work. I would also like to thank Devyani Sharma for the much-needed coffee breaks and conversation between my work. Late-night discussions and motivational talk from Samuel Mani has played a massive role in me, keeping up my spirits through this thesis. Thank you so much for that! I want to thank my friends Saran, Preetha, Kammath, Reuben, Apurva, Shrinidhi, Thejus, Arun, Hitha, Mamta, Sid, Geo, Jesil and all my friends back home for helping me during this time.
+Last but not least, my family has been supportive and encouraging of my decisions during this time. I thank Amma, Appa, Vivek, Yamini, Rohit, Prabhat, and Ammama for their love and support. I am indebted to them for all that they have done for me. I wish my granddad was here to see me complete this master's. He was dearly missed during this time.
+
+\end{comment}
 
 
 \newpage
 \chapter*{Abstract}
 \setheader{Preface}
-To meet the European climate target of 27\% by 2030 in a cost effective way, large scale offshore wind energy proves to be a vital solution for the Netherlands. On the other hand, the implementation of large scale offshore could also lead to an increase in the penetration of power electronic converter based units in the grid which could lead to rise of challenges to the power system.
+To meet the European climate target of 27\% by 2030 in an effective way, large scale offshore wind energy proves to be an important solution for the Netherlands. The international association consisting of TenneT, Energinet, Gausine and Port of Rotterdam is working on developing technical solutions for supplying clean energy from renewable energy sources in large scale. This includes offshore wind farms power capacities ranging from 70 to 150 GW by 2040 and increasing upto 180 GW by 2045. On the other hand, the implementation of large scale offshore could also lead to an increase in the penetration of power electronic converter based units in the grid which could lead to rise of challenges to the power system.
 
-After analyzing the need for 66 kV \gls{HVAC} transmission from the wind farms to the offshore centralized platform, in this thesis, a 66 kV offshore network with an enhanced control strategy in Type-4 Wind Generators (\gls{WG}s) is developed in RSCAD. The control strategy provides continuous voltage control that improves the dynamic performance of the power system. The significant requirement of reactive power injection by the \gls{WG}s during dynamic conditions as mentioned in many grid codes is also satisfied by the controller. The working of the control strategy is validated for \gls{EMT} simulations under severe dynamic conditions by developing a similar network in PowerFactory with a benchmark controller model. The final goal of developing a large scale network with a defined topology for 2 GW is achieved in a modularized approach in RSCAD. In this network, four sets of \gls{WG}s are connected across two offshore Modular Multi-level Converters (\gls{MMC}s) working in two different control schemes and the coordination between the implemented voltage control in \gls{WG}s and the control structures in \gls{MMC}s is analysed for different events in the network.
+To mitigate the challenges due to increasing power electronic converters, a control strategy is implemented in RSCAD for EMT based simulations. After analyzing the need for 66 kV \gls{HVAC} transmission from the wind farms to the offshore centralized platform, in this thesis, a 66 kV offshore network is developed with the control strategy implemented in Type-4 wind generators in RSCAD. The control strategy provides continuous voltage control that improves the dynamic performance of the power system. The significant requirement of reactive power injection by the wind generators during dynamic conditions as mentioned in many grid codes is satisfied by the controller. The working of the control strategy is validated for \gls{EMT} simulations under severe dynamic conditions by developing a similar network in PowerFactory with a benchmark controller model. The final goal of developing a large scale network with a defined topology for 2 GW is achieved in a modularized approach in RSCAD. In this network, four sets of offshore wind farms are connected across two offshore modular multi-level converters working in two different control schemes and the coordination between the implemented voltage control in wind generators and the control structures in modular multi-level converters is analysed for different events in the network.
 
-The international association consisting of TenneT, Energinet, Gausine and Port of Rotterdam is working on developing technical solutions for supplying clean energy from renewable energy sources in large scale. This includes offshore wind farms power capacities ranging from 70 to 150 GW by 2040 and increasing upto 180 GW by 2045. This calls for the need of solutions for deployment of power from offshore wind farms in large scale.
+
 
 \begin{flushright}
 {\makeatletter\itshape
     \@author \\
-    Delft, August 2019
+    Delft, October 2020
 \makeatother}
 \end{flushright}
 
