--- a/5.Operation of the large scale OWF network.tex
+++ b/5.Operation of the large scale OWF network.tex
@@ -42,30 +42,30 @@ The \gls{AC} side of \gls{MMC}s are to be connected to simulate the synchronizat
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/VABC_MMC_1_2_CB_5a.eps}
-    \caption{MMC bus voltage in kV upon CB-5a closing operation}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7.5cm,width = \textwidth]{Diagrams/Chapter_5/VABC_MMC_1_2_CB_5a.eps}
+    \caption{Voltages at MMC bus upon CB-5a closing operation}
     \label{fig:VABC_MMC_1_2_CB_5a}
 \end{figure}
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 7.5cm,width = 10cm]{Diagrams/Chapter_5/VACP_MMC_1_2_CB_5a.eps}
-    \caption{MMC bus voltage in p.u. upon CB-5a closing operation}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/VACP_MMC_1_2_CB_5a.eps}
+    \caption{Voltage in p.u. at MMC bus upon CB-5a closing operation}
     \label{fig:VACP_MMC_1_2_CB_5a}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-1 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_1_CB_5a.eps}%
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-1 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_1_CB_5a.eps}%
 \label{fig:IABC_MMC_1_CB_5a}}
 
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-2 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_2_CB_5a.eps}%
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-2 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_2_CB_5a.eps}%
 \label{fig:IABC_MMC_2_CB_5a}}
 
 \caption{Currents in a) MMC-1 bus and b) MMC-2 bus upon CB-5a closing operation}
@@ -77,30 +77,30 @@ The next step is to close the circuit breaker, CB-6a to connect \gls{MMC}-2 to t
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/VABC_MMC_1_2_CB_6a.eps}
-    \caption{Voltage in kV in MMC bus upon CB-6a closing operation}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7.5cm,width = \textwidth]{Diagrams/Chapter_5/VABC_MMC_1_2_CB_6a.eps}
+    \caption{Voltages at MMC bus upon CB-6a closing operation}
     \label{fig:VABC_MMC_1_2_CB_6a}
 \end{figure}
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 7.5cm,width = 10cm]{Diagrams/Chapter_5/VACP_MMC_1_2_CB_6a.eps}
-    \caption{Voltage in p.u. in MMC bus upon CB-6a closing operation}
+    \includegraphics[height = 7.5cm,width = \textwidth]{Diagrams/Chapter_5/VACP_MMC_1_2_CB_6a.eps}
+    \caption{Voltage in p.u. at MMC bus upon CB-6a closing operation}
     \label{fig:VACP_MMC_1_2_CB_6a}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-1 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_1_CB_6a.eps}%
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-1 bus]{%
+  \includegraphics[height = 7.5cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_1_CB_6a.eps}%
 \label{fig:IABC_MMC_1_CB_5a}}
 
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-2 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_2_CB_6a.eps}%
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-2 bus]{%
+  \includegraphics[height = 7.5cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_2_CB_6a.eps}%
 \label{fig:IABC_MMC_2_CB_5a}}
 
 \caption{Currents in a) MMC-1 bus and b) MMC-2 bus upon CB-6a closing operation}
@@ -113,23 +113,23 @@ The energization procedure of the \gls{AC} network followed in this work involve
 The cable-1 gets energized when the CB-1a circuit breaker, as shown in Figure \ref{fig:WT4_MMC2_Chap5}, is switched on. The voltage at \gls{MMC} common bus is increased and set to a value of nearly 1.05 p.u. as seen in Figure \ref{VACP_MMC_bus_Cab1charg}. The current for cable charging is provided by \gls{MMC}-1 and the active power reference for the \gls{MMC}-2 is not changed in this process. Hence, current flow in \gls{MMC}-1 bus increases for cable-1 charging as shown in Figure \ref{fig:IABC_MMC_1_Cab1charg} and the current flow in \gls{MMC}-2 bus remains unchanged as shown in Figure \ref{fig:IABC_MMC_2_Cab1charg}. The disturbances observed during the switching operation at 0.5 seconds, before the currents stabilize to a particular value at 0.75 seconds, is due to the \gls{PI} parameters chosen for the U/F control in \gls{MMC}-1. Optimizing these parameters through small-signal stability analysis could achieve smoother signals. The current in cable-1 upon CB-1a closing is depicted in Figure \ref{fig:IABC_Cab1_Cab1charg}. 
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 9cm]{Diagrams/Chapter_5/VACP_MMC_bus_Cab1charg.eps}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/VACP_MMC_bus_Cab1charg.eps}
     \caption{Voltage at MMC bus upon charging of cable-1}
     \label{VACP_MMC_bus_Cab1charg}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-1 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_1_Cab1charg.eps}%
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-1 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_1_Cab1charg.eps}%
 \label{fig:IABC_MMC_1_Cab1charg}}
 
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-2 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_2_Cab1charg.eps}%
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-2 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_2_Cab1charg.eps}%
 \label{fig:IABC_MMC_2_Cab1charg}}
 
 \caption{Currents in a) MMC-1 bus b) MMC-2 bus upon CB-1a closing operation for charging of cable-1}
@@ -138,45 +138,53 @@ The cable-1 gets energized when the CB-1a circuit breaker, as shown in Figure \r
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_Cab1_Cab1charg.eps}
-    \caption{Currents in cable-1 charging of cable-1}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_Cab1_Cab1charg.eps}
+    \caption{Currents in cable-1 upon CB-1a closing operation for charging of cable-1}
     \label{fig:IABC_Cab1_Cab1charg}
 \end{figure}
 
-After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is switched on. \gls{OWF}-1 gets connected to the network. As mentioned in Section \ref{energization_HVAC_Cables}, the \gls{OWF}-1 is connected initially with less generation to keep the voltage at \gls{PCC}-1 within limits. The initial high voltage at the \gls{PCC}-1 before closing the breaker as seen in Figure \ref{VACP_WT1_WT1connect} is due to the capacitance in the DC link. Once the breaker is closed, the voltage is maintained at nearly 1 p.u. as shown in Figure \ref{VACP_WT1_WT1connect} and the currents in \gls{PCC}-1 also increase as shown in Figure \ref{IABC_WT1_WT1connect}. The \gls{OWF} starts generating 50 MW and this flows through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_2_WT1234connect} a). In a similar way all the other \gls{OWF}s are connected. All \gls{OWF}s are connected with 50 MW generation. A total power of 200 MW through \gls{MMC}-1 after connection of \gls{OWF}-1, \gls{OWF}-2, \gls{OWF}-3 and \gls{OWF}-4 is clearly depicted in Figure \ref{P_MMC_1_2_WT1234connect}a). There is no flow of active power in \gls{MMC}-2 (Figure \ref{P_MMC_1_2_WT1234connect}b)) since the rated capacity of 1 GW of \gls{MMC}-1 is yet to be reached.
+After cable-1 has been charged, the breaker at the \gls{OWF}-1 end (CB-1b) is switched on. \gls{OWF}-1 gets connected to the network. As mentioned in Section \ref{energization_HVAC_Cables}, the \gls{OWF}-1 is connected initially with less generation to keep the voltage at \gls{PCC}-1 within limits. The initial high voltage at the \gls{PCC}-1 before closing the breaker as seen in Figure \ref{VACP_WT1_WT1connect} is due to the capacitance in the DC link. Once the breaker is closed, the voltage is maintained at nearly 1 p.u. as shown in Figure \ref{VACP_WT1_WT1connect} and the currents in \gls{PCC}-1 also increase as shown in Figure \ref{IABC_WT1_WT1connect}. The \gls{OWF} starts generating 50 MW and this flows through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_WT1234connect}. In a similar way all the other \gls{OWF}s are connected. All \gls{OWF}s are connected with 50 MW generation. A total power of 200 MW through \gls{MMC}-1 after connection of \gls{OWF}-1, \gls{OWF}-2, \gls{OWF}-3 and \gls{OWF}-4 is clearly depicted in Figure \ref{P_MMC_1_WT1234connect}. There is no flow of active power in \gls{MMC}-2 (Figure \ref{P_MMC_2_WT1234connect}) since the rated capacity of 1 GW of \gls{MMC}-1 is yet to be reached.
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 9cm]{Diagrams/Chapter_5/VACP_WT1_WT1connect.eps}
-    \caption{Voltage at PCC-1 upon connecting OWF-1 with 50 MW generation to the network}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/VACP_WT1_WT1connect.eps}
+    \caption{Voltage in p.u. at PCC-1 upon connecting OWF-1 with 50 MW generation to the network}
     \label{VACP_WT1_WT1connect}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-    \includegraphics[height = 8.5cm,width = 19.5cm]{Diagrams/Chapter_5/IABC_WT1_WT1connect.eps}
-    \caption{Currents at PCC-1 upon connecting OWF-1 with 50 MW generation to the network}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_WT1_WT1connect.eps}
+    \caption{Currents in PCC-1 upon connecting OWF-1 with 50 MW generation to the network}
     \label{IABC_WT1_WT1connect}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.7cm}
-    \includegraphics[height = 8.5cm,width = 20.5cm]{Diagrams/Chapter_5/P_MMC_1_2_WT1234connect.eps}
-    \caption{Active power in a) MMC-1 and b) MMC-2 upon connecting all OWFs}
-    \label{P_MMC_1_2_WT1234connect}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_1_WT1234connect.eps}
+    \caption{Active power in MMC-1 bus upon connecting all OWFs with 50 MW generation each}
+    \label{P_MMC_1_WT1234connect}
+\end{figure}
+
+\begin{figure}[H]
+%\centering
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_2_WT1234connect.eps}
+    \caption{Active power in MMC-2 bus upon connecting all OWFs with 50 MW generation each}
+    \label{P_MMC_2_WT1234connect}
 \end{figure}
 
 Once the system gets stabilized, the generation is increased in steps by increasing the number of parallel \gls{WG} units. On doing so, the voltage is ensured to be within limits at all \gls{PCC}s. The power flow to the \gls{MMC}-2 is to be controlled in the next step. This is done by controlling the active power reference of \gls{MMC}-2. For this study, it is modelled such that all \gls{OWF}s have the same scaling of power and hence they all produce the same amount of power at every instant. An step-by-step increment of 50 MW in all \gls{OWF} is done and correspondingly the active power reference for \gls{MMC}-2 is also increased. Finally, the \gls{OWF}s are made to generate 500 MW each and the total of nearly 2 GW power is equally split between \gls{MMC}-1 and \gls{MMC}-2 having nearly 960 MW active power in each as seen from the final steady state plots in Figure \ref{P_MMC_1_2_All_WTconnect}.
 
 \begin{figure}[H]
 \centering
-%\hspace*{-1.2cm}
-    \includegraphics[height = 6cm,width = 9cm]{Diagrams/Chapter_5/P_MMC_1_2_All_WTconnect.eps}
-    \caption{Active power in MMC-1 and MMC-2 upon connecting all 4 WGs in full generation}
+%\hspace*{-1cm}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_1_2_All_WTconnect.eps}
+    \caption{Active power in MMC-1 and MMC-2 buses upon connecting all OWFs with 500 MW generation each}
     \label{P_MMC_1_2_All_WTconnect}
 \end{figure}
 
@@ -190,26 +198,26 @@ The first event is a sudden disconnection of one \gls{OWF}. \gls{OWF}-2 is perma
 
 
 \begin{figure}[H]
-\centering
-%\hspace*{-1.2cm}
-    \includegraphics[height = 6cm,width = 9cm]{Diagrams/Chapter_5/P_MMC_1_2_WT2off.eps}
-    \caption{Active power in MMC-1 connected bus and MMC-2 connected bus during OWF-2 disconnection event}
+%\centering
+%\hspace*{-1cm}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_1_2_WT2off.eps}
+    \caption{Active power in MMC-1 and MMC-2 buses upon OWF-2 disconnection event}
     \label{P_MMC_1_2_WT2off}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-1 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_1_WT2off.eps}%
+%\hspace*{-1cm}
+\subfloat[Currents in MMC-1 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_1_WT2off.eps}%
 \label{fig:IABC_MMC_1_WT2off}}
 
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-2 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_2_WT2off.eps}%
+%\hspace*{-1cm}
+\subfloat[Currents in MMC-2 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_2_WT2off.eps}%
 \label{fig:IABC_MMC_2_WT2off}}
 
-\caption{Currents in a) MMC-1 bus and b) MMC-2 bus during OWF-2 disconnection event}
+\caption{Currents in a) MMC-1 bus and b) MMC-2 bus upon OWF-2 disconnection event}
 \label{fig:IABC_MMC_1_2_WT2off}
 \end{figure}
 
@@ -220,21 +228,23 @@ In the \gls{OWF}s side, the voltage at \gls{PCC}-2 goes to beyond bounds and is 
 %\centering
 \hspace*{-1.7cm}
     \includegraphics[height = 10.5cm,width = 20.5cm]{Diagrams/Chapter_5/VACP_WT1234_WT2off.eps}
-    \caption{Voltages at a) PCC-1, b) PCC-2, c) PCC-3 and d) PCC-4 during OWF-2 disconnection event}
+    \caption{Voltage in p.u. at a) PCC-1, b) PCC-2, c) PCC-3 and d) PCC-4 upon OWF-2 disconnection event}
     \label{VACP_WT134_WT2off}
 \end{figure}
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 17.5cm]{Diagrams/Chapter_5/IABC_WT1_WT2off.eps}
-    \caption{Currents at PCC-1 during OWF-2 disconnection event}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_WT1_WT2off.eps}
+    \caption{Currents at PCC-1 upon OWF-2 disconnection event}
     \label{IABC_WT1_WT2off}
 \end{figure}
 
 \subsection{Three-phase line to ground fault}
 
-Before the application of three-phase line to ground fault, a logic to operate the circuit breaker (CB-1a) at the cable-1 end is developed as shown in Figure \ref{fig:Fault_logic}. This logic is inspired from the "Fault Control" model \footnote{Tutorial >> SAMPLES >> Mainstep >> Fault Control} available in RSCAD. For the fault, the line to ground fault component available in RSCAD library is used \cite{rtds_tech}.
+Before the application of three-phase line to ground fault, a logic to operate the circuit breaker (CB-1a) at the cable-1 end is developed as shown in Figure \ref{fig:Fault_logic}. This logic is inspired from the "Fault Control" model 
+%\footnote{Tutorial >> SAMPLES >> Mainstep >> Fault Control} available in RSCAD. 
+For the fault, the line to ground fault component available in RSCAD library is used \cite{rtds_tech}.
 
 \subsubsection{Circuit Breaker (CB) operation logic}\label{Fault logic and cb}
 The logic is developed for the operation of the circuit breaker CB-1a in Figure \ref{fig:WT4_MMC2_Chap5} by detecting overcurrent. The signal 'SWD2A' is the signal for operating CB-1a. Initially, the breaker is closed during the energizing process using the switch 'CabMMC$\_$side'. Once the system is fully operational after connecting all the four \gls{OWF}s and achieving 2 GW power in the network, the 'Activ' switch in Figure \ref{fig:Fault_logic} is turned on. This is done to provide the switching operation of CB-1a by comparing the RMS current ($I_{rms}$) and the maximum phase current ($I_{phase\_max}$)\footnote{$I_{phase\_max}$ = 10 \% above $I_{phase}$ = 1.1 $\times$ $I_{phase}$
@@ -244,113 +254,127 @@ $I_{phase}$ = $\frac{Apparent \;\; power \;\; in \;\; single-phase}{Line \;\; to
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 4.5cm,width = 14.5cm]{Diagrams/Chapter_5/Fault_logic_New.pdf}
+    \includegraphics[height = 4.5cm,width = \textwidth]{Diagrams/Chapter_5/Fault_logic_New.pdf}
     \caption{Circuit breaker operation logic}
     \label{fig:Fault_logic}
 \end{figure}
 
-In order to analyse the short-term voltage stability of the system, a permanent three-phase line to ground fault is applied in the middle of the \gls{OWF}-1 cable. The response of the network is recorded and the plots for voltages, currents, active and reactive powers are depicted from Figure \ref{Circuit_breaker_3phasefault} to Figure \ref{18_3phaseSC} for the event. During the time of fault, the RMS current exceeds the maximum phase current and the logic developed detects this over current at CB-1a. This leads to the opening of breaker CB-1a according to the logic explained in previous paragraph. The overcurrent is detected at 0.53 s of the simulation from the developed logic and a short delay of nearly 12 ms is provided to open the breaker after the fault has been detected similar to a practical scenario (Figure \ref{Circuit_breaker_3phasefault}). After the breaker has been opened, the \gls{OWF}-1 is isolated from the network and the total power provided to the onshore network is reduced. The total power in the pre-fault period is 2 GW and after the fault the total power is reduced to 1500 MW. Similar to the disconnection of one \gls{OWF} discussed earlier in Section \ref{disconnection_one_OWF}, the power flow is reduced through \gls{MMC}-1 as shown in Figure \ref{17_3phaseSC}. It is also worthy to mention that the network is stable by viewing the the stable voltage in the post-fault period in \gls{MMC} as shown in Figure \ref{VABC_MMC_1_3phaseSC}.
-
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = 19.5cm]{Diagrams/Chapter_5/IABC_CB_3phaseSC_new_4.eps}
-    \caption{Currents in circuit breaker (CB-1a) during three-phase line to ground fault in cable-1}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 7.5cm,width = \textwidth]{Diagrams/Chapter_5/IABC_CB_3phaseSC_new_4.eps}
+    \caption{Currents in circuit breaker (CB-1a) upon three-phase line to ground fault in the middle of cable-1}
     \label{Circuit_breaker_3phasefault}
 \end{figure}
 
-A major observation can be viewed from the profile of transients during the fault in the currents of both the \gls{MMC}s in Figure \ref{fig:IABC_MMC_1_3phaseSC} and Figure \ref{fig:IABC_MMC_2_3phaseSC}. The initial rise in current till 0.53 s is due to the occurrence of the three-phase fault. The breaker is opened at 0.542 s. The profile of the currents at around 0.59 s are complementary in both \gls{MMC}s i.e. the currents are decreasing in \gls{MMC}-1 and increasing in \gls{MMC}-2. This is due to the difference in control strategies in \gls{MMC}-1 (U/F control) and \gls{MMC}-2 (active power control). The increase in current in \gls{MMC}-2 after the fault has been cleared can be explained by viewing the current profiles in the \gls{OWF}s which is detailed in the following section.
+In order to analyse the short-term voltage stability of the system, a permanent three-phase line to ground fault is applied in the middle of the \gls{OWF}-1 cable. The response of the network is recorded and the plots for voltages, currents, active and reactive powers are depicted from Figure \ref{Circuit_breaker_3phasefault} to Figure \ref{IDQ_WT2_3phaseSC} for the event. During the time of fault, the RMS current exceeds the maximum phase current and the logic developed detects this over current at CB-1a. This leads to the opening of breaker CB-1a according to the logic explained in previous paragraph. The overcurrent is detected at 0.53 s of the simulation from the developed logic and a short delay of nearly 12 ms is provided to open the breaker after the fault has been detected similar to a practical scenario (Figure \ref{Circuit_breaker_3phasefault}). After the breaker has been opened, the \gls{OWF}-1 is isolated from the network and the total power provided to the onshore network is reduced. The total power in the pre-fault period is 2 GW and after the fault the total power is reduced to 1500 MW. Similar to the disconnection of one \gls{OWF} discussed earlier in Section \ref{disconnection_one_OWF}, the power flow is reduced through \gls{MMC}-1 as shown by the blue line in Figure \ref{17_3phaseSC}. It is also worthy to mention that the network is stable by viewing the the stable voltage in the post-fault period in \gls{MMC} bus as shown in Figure \ref{VABC_MMC_1_3phaseSC}.
+
+
+
+The increase in active power in \gls{MMC}-2 after the fault has been cleared (as seen from the red line in Figure \ref{17_3phaseSC}) can be explained by viewing the current profiles in the \gls{OWF}s which is detailed in the following paragraph. A major observation can be viewed from the profile of transients during the fault in the currents of both the \gls{MMC}s in Figure \ref{fig:IABC_MMC_1_3phaseSC} and Figure \ref{fig:IABC_MMC_2_3phaseSC}. The initial rise in current till 0.53 s is due to the occurrence of the three-phase fault. The breaker is opened at 0.542 s. The profile of the currents at around 0.59 s are complementary in both \gls{MMC}s i.e. the currents are decreasing in \gls{MMC}-1 and increasing in \gls{MMC}-2. This is due to the difference in control strategies in \gls{MMC}-1 (U/F control) and \gls{MMC}-2 (active power control).
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 9.25cm]{Diagrams/Chapter_5/P_MMC_1_2_3phaseSC.eps}
-    \caption{Active power in MMC-1 bus and MMC-2 bus during three-phase line to ground fault in cable-1}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/P_MMC_1_2_3phaseSC.eps}
+    \caption{Active power in MMC-1 bus and MMC-2 bus upon three-phase line to ground fault in the middle of cable-1}
     \label{17_3phaseSC}
 \end{figure}
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 17.5cm]{Diagrams/Chapter_5/VABC_MMC_1_3phaseSC.eps}
-    \caption{Voltage at MMC bus during three-phase line to ground fault in the middle of cable-1}
+    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/VABC_MMC_1_3phaseSC.eps}
+    \caption{Voltages at MMC bus upon three-phase line to ground fault in the middle of cable-1}
     \label{VABC_MMC_1_3phaseSC}
+\end{figure}
+
+
+\begin{figure}[H]
+%\centering
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-1 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_1_3phaseSC.eps}%
+\label{fig:IABC_MMC_1_3phaseSC}}
+
+%\hspace*{-1.2cm}
+\subfloat[Currents in MMC-2 bus]{%
+  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_5/IABC_MMC_2_3phaseSC.eps}%
+\label{fig:IABC_MMC_2_3phaseSC}}
+
+\caption{Currents in a) MMC-1 bus and b) MMC-2 bus upon three-phase line to ground fault in the middle of cable-1}
+\label{fig:IABC_MMC_2_3phaseSC}
+\end{figure}
+
+Analysing at the \gls{OWF}s side of the network, the \gls{DVC} is modelled to provide rated reactive current to flow to the fault location by controlling the voltage of the converter as explained in Section \ref{DVC_RSCAD}. From the voltage in p.u. plot in Figure \ref{VACP_WT1_3phaseSC} and the three-phase voltage plot in Figure \ref{VABC_WT1_3phaseSC}, it can be seen that the voltage at the \gls{PCC}-1 drops and remains low throughout the fault period. During the time of fault in cable-1 and after CB-1a is opened, the voltage angle and magnitude at \gls{PCC}-1 goes to zero. The \gls{PLL} is synchronized with the \gls{AC} voltage at the \gls{PCC}-1. The voltage magnitude at \gls{GSC} remains non-zero, and the voltage angle is zero  during the time of fault as the \gls{PLL} follows the angular reference at \gls{PCC}-1. Therefore, due to higher voltage magnitude at the \gls{GSC} than the magnitude at \gls{PCC}-1, reactive power will flow from the \gls{GSC} to \gls{PCC}-1 and since the voltage angle is zero at \gls{GSC} and \gls{PCC}-1, the active power transmitted is zero during the time of fault. This is performed in \gls{DVC} by controlling the d-axis reference voltage of the \gls{GSC} and thereby indirectly controlling the current coming out of the \gls{GSC} to \gls{PCC}-1. The current limitation algorithm implemented in the \gls{DVC} in Section \ref{currentlimitation_RSCAD}, limits the output current to the rating of the converter and hence rated reactive current flows from the \gls{GSC} as seen in Figure \ref{WT1_currents_3phasefault}.
+
+
+
+\begin{figure}[H]
+%\centering
+%\hspace*{-1.2cm}
+    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_5/VACP_WT1_3phaseSC.eps}
+    \caption{Voltage in p.u. at PCC-1 upon three-phase line to ground fault in the middle of cable-1}
+    \label{VACP_WT1_3phaseSC}
 \end{figure}
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-1 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_1_3phaseSC.eps}%
-\label{fig:IABC_MMC_1_3phaseSC}}
-
-\hspace*{-1.2cm}
-\subfloat[Current in MMC-2 bus]{%
-  \includegraphics[height = 7cm,width = 18.5cm]{Diagrams/Chapter_5/IABC_MMC_2_3phaseSC.eps}%
-\label{fig:IABC_MMC_2_3phaseSC}}
-
-\caption{Currents in a) MMC-1 bus and b) MMC-2 bus during three-phase line to ground fault in the middle of cable-1}
-\label{fig:IABC_MMC_2_3phaseSC}
-\end{figure}
-
-
-Analysing at the \gls{OWF}s side of the network, the \gls{DVC} is modelled to provide rated reactive current to flow to the fault location by controlling the voltage of the converter as explained in Section \ref{DVC_RSCAD}. From the voltage in p.u. plot in Figure \ref{WT1_voltages_3phasefault} and the three-phase voltage plot in Figure \ref{VABC_WT1_3phaseSC}, it can be seen that the voltage at the \gls{PCC}-1 drops and remains low throughout the fault period. During the time of fault in cable-1 and after CB-1a is opened, the voltage angle and magnitude at \gls{PCC}-1 goes to zero. The \gls{PLL} is synchronized with the \gls{AC} voltage at the \gls{PCC}-1. The voltage magnitude at \gls{GSC} remains non-zero, and the voltage angle is zero  during the time of fault as the \gls{PLL} follows the angular reference at \gls{PCC}-1. Therefore, due to higher voltage magnitude at the \gls{GSC} than the magnitude at \gls{PCC}-1, reactive power will flow from the \gls{GSC} to \gls{PCC}-1 and since the voltage angle is zero at \gls{GSC} and \gls{PCC}-1, the active power transmitted is zero during the time of fault. This is performed in \gls{DVC} by controlling the d-axis reference voltage of the \gls{GSC} and thereby indirectly controlling the current coming out of the \gls{GSC} to \gls{PCC}-1. The current limitation algorithm implemented in the \gls{DVC} in Section \ref{currentlimitation_RSCAD}, limits the output current to the rating of the converter and hence rated reactive current flows from the \gls{GSC} as seen in Figure \ref{WT1_currents_3phasefault}.
-
-\begin{figure}[H]
-\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 9.25cm]{Diagrams/Chapter_5/VACP_WT1_3phaseSC.eps}
-    \caption{Voltages at PCC-1 during three-phase line to ground fault in cable-1}
-    \label{WT1_voltages_3phasefault}
-\end{figure}
-
-\begin{figure}[H]
-\centering
-%\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 17.5cm]{Diagrams/Chapter_5/VABC_WT1_3phaseSC.eps}
-    \caption{Voltages at PCC-1 during three-phase line to ground fault in cable-1}
+    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_5/VABC_WT1_3phaseSC.eps}
+    \caption{Voltages at PCC-1 upon three-phase line to ground fault in the middle of cable-1}
     \label{VABC_WT1_3phaseSC}
 \end{figure}
 
-Also the voltages at the \gls{PCC} of \gls{WG}s- 2, 3 and 4 have transients during the time of fault and is then stabilised to slightly higher value than the pre-fault state to compensate for the loss of \gls{OWF}-1 from the network. The post-fault voltage value is within the tolerance limit ($\pm$10 \% ) and this can be viewed from the graphs in Figure \ref{VACP_WT234_3phaseSC} a). An important observation in the voltage graphs of \gls{WG}s -2,3 and 4 is the occurrence spikes right after the fault is released, as can be seen in Figure \ref{VACP_WT234_3phaseSC} b). The interactions between the \gls{PLL}s in the \gls{DVC}s and the \gls{PLL} in the U/F control as to which control dominates right when the fault is released, to calculate the angular reference can be understood to be the reason for this surge. This is an important issue faced by the industry experts are requires intensive research.
+Also the voltages at \gls{PCC}-2, 3 and 4 have transients during the time of fault and is then stabilised to slightly higher value than the pre-fault state to compensate for the loss of \gls{OWF}-1 from the network. The post-fault voltage value is within the tolerance limit ($\pm$10 \% ) and this can be viewed from the graphs in Figure \ref{VACP_WT234_3phaseSC}. An important observation in the voltage graphs of \gls{OWF}s-2, 3 and 4 is the occurrence of spikes right after the circuit breaker CB-1a is opened, as can be seen in Figure \ref{VACP_WT234_3phaseSC}. 
+There can be two reasons for such a phenomena to occur. The first is that, after the circuit breaker CB-1a is opened, reactive current injection still takes place (at 0.59 s in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) and this causes the voltage at the corresponding \gls{PCC} to also rise. Such a rise in voltage is not applicable in real world \gls{OWF}s and is therefore a drawback that occurs due to the \gls{OWF} modelling. The second reason could be due to two control strategies that provide the voltage reference in the network. It is seen that during the steady state and post-fault condition, the U/F control is dominant and provides the voltage reference in the network. However, during the time of fault, the \gls{DVC} in all \gls{OWF}s takes the role of providing the voltage reference in the corresponding \gls{PCC}s as seen in \gls{PCC}-1 during the time of three-phase line to ground fault in cable-1. The sudden change back to the steady-state condition after the fault is released could lead to discrepancies between the U/F mode and the \gls{DVC}. The conflict between these control strategies occur as to which control strategy provides the voltage reference right after the circuit breaker is open and hence this causes a spike in voltage at the \gls{PCC}s.
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 17.5cm]{Diagrams/Chapter_5/IABC_WT1_3phaseSC.eps}
-    \caption{Currents at PCC-1 during three-phase line to ground fault in cable-1}
+    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_5/IABC_WT1_3phaseSC.eps}
+    \caption{Currents in PCC-1 upon three-phase line to ground fault in the middle of cable-1}
     \label{WT1_currents_3phasefault}
 \end{figure}
 
 
-The currents from these other \gls{WG}s are slightly reduced in the post-fault region (Figure \ref{IABC_WT234_3phaseSC}). The \gls{DVC} control in these \gls{WG}s operate during the time of fault and limit the currents by controlling the voltages at their respective \gls{PCC}s. These \gls{WG}s provide slightly higher amount of power as compared to the pre-fault state to be fed to the \gls{MMC}s due to the fact that the active power reference for \gls{MMC}-2 is set back to the initial value during the post-fault period. Another important finding is in the profile of transients of currents during the occurrence of fault in \gls{WG}s-2,3 and 4. The current is limited during the time of fault and after the breaker has been operated, the profile is similar to that of the \gls{MMC}-2. This shows that \gls{MMC}-1 is dominating during the steady-state conditions and \gls{DVC} takes over control during dynamic scenarios. In practicality, since the fault occurs in the middle of the sea and it is difficult that the fault clears on its own, this control proves to be a valid strategy to control the voltage instabilities during the islanding of the offshore \gls{OWF}s. 
+The currents from the \gls{OWF}s-2, 3 and 4 are the same in the post-fault region as the pre-fault condition (Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) since the scaling factor for each \gls{OWF} is still the same. The \gls{DVC} control in these \gls{OWF}s operate during the time of fault and limit the currents by controlling the voltages at their respective \gls{PCC}s. Due to the increase in voltage in the post-fault period at the \gls{PCC}s-2, 3 and 4 as mentioned in the previous paragraph, the active power generated also will be higher from the \gls{OWF}s-2, 3 and 4 and it is also reflected in the increase in active power in \gls{MMC}-2 as shown in Figure \ref{17_3phaseSC}. Another important observation is in the profile of transients in the currents in \gls{PCC}s-2, 3 and 4 following the occurrence of the fault. As shown in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2, the current is limited from 0.5 to 0.54 s during the time of fault. After the breaker has been operated at 0.542 s, the profile of currents (from 0.55 s to 0.6 s) is similar to that of the \gls{MMC}-2 (Figure \ref{fig:IABC_MMC_2_3phaseSC}). This shows that \gls{MMC}-1 is dominating during the steady-state conditions and \gls{DVC} takes over control during dynamic scenarios.
 
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
+%\hspace*{-1.2cm}
 \captionsetup{justification=centering}
-    \includegraphics[height = 7.5cm,width = 19.25cm]{Diagrams/Chapter_5/VACP_WT234_3phaseSC.eps}
-    \caption{a) Voltages at PCC-2, 3 and 4 during three phase short circuit in cable-1 b) Zoom-in of voltages at PCC-2, 3 and 4 during three phase short circuit in cable-1}
+    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_5/VACP_WT2_3phaseSC.eps}
+    \caption{Voltage in p.u. at PCC-2 upon three-phase line to ground fault in the middle of cable-1}
     \label{VACP_WT234_3phaseSC}
 \end{figure}
 %\vspace{-2mm}
 
 
 \begin{figure}[H]
-\centering
+%\centering
 %\hspace*{-1.2cm}
 \captionsetup{justification=centering}
-    \includegraphics[height = 6.5cm,width = 17.25cm]{Diagrams/Chapter_5/IABC_WT234_3phaseSC.eps}
-    \caption{Currents at PCC-2, 3 and 4 during three-phase line to ground fault in cable-1}
-    \label{IABC_WT234_3phaseSC}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Chapter_5/IABC_WT2_3phaseSC.eps}
+    \caption{Currents in PCC-2 upon three-phase line to ground fault in the middle of cable-1}
+    \label{IABC_WT2_3phaseSC}
 \end{figure}
 
-As per the available grid codes mentioned in \cite{mohseni_review_2012}, during normal operation active current must be the priority and during the time of fault the priority must be changed to reactive current. The major takeaway from this chapter is that, the \gls{DVC} follows the reactive current injection requirement during the time of fault as shown in Figure \ref{18_3phaseSC} a) even while working in coordination with other controls in the network. The current is limited to the rated current of the converter by the current limitation algorithm in \gls{DVC} without requirement of any external controls. Simultaneously, the currents in the other \gls{WG}s are balanced as per the active power required in \gls{MMC}-2 as seen in Figure \ref{18_3phaseSC} b). 
+In practice, if a three-phase fault occurs in a subsea cable, it is difficult that the fault clears on its own and would require human interference. During such critical islanding situations, the \gls{DVC} allows rated reactive current to flow to the fault location by controlling the \gls{GSC} voltage and thereby protecting the converters in the \gls{OWF} from high overcurrents. Based on the reference grid codes mentioned in \cite{mohseni_review_2012}, during normal operation active current must be the priority and during the time of fault the priority must be changed to reactive current. The major takeaway from this chapter is that, the \gls{DVC} follows the reactive current injection requirement during the time of fault as shown in Figure \ref{IDQ_WT1_3phaseSC} even while working in coordination with other controls in the network. The current is limited to the rated current of the converter by the current limitation algorithm in \gls{DVC} without requirement of any external controls. Simultaneously, the currents in the other \gls{OWF}s are balanced as per the active power required in \gls{MMC}-2 as seen in Figure \ref{IDQ_WT2_3phaseSC}. 
+
 \vspace{-3mm}
 \begin{figure}[H]
 %\centering
-\hspace*{-1.2cm}
-    \includegraphics[height = 6cm,width = 17.25cm]{Diagrams/Chapter_5/IDQ_WT1234_3phaseSC.eps}
-    \caption{Currents in d and q axes at PCC-1 during three-phase line to ground fault in cable-1}
-    \label{18_3phaseSC}
+%\hspace*{-1.2cm}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Chapter_5/IDQ_WT1_3phaseSC.eps}
+    \caption{Currents in d and q axes in PCC-1 upon three-phase line to ground fault in the middle of cable-1}
+    \label{IDQ_WT1_3phaseSC}
+\end{figure}
+\vspace{-5mm}
+\begin{figure}[H]
+%\centering
+%\hspace*{-1.2cm}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Chapter_5/IDQ_WT2_3phaseSC.eps}
+    \caption{Currents in d and q axes in PCC-2 upon three-phase line to ground fault in the middle of cable-1}
+    \label{IDQ_WT2_3phaseSC}
 \end{figure}
