--- a/title.tex
+++ b/title.tex
@@ -57,10 +57,10 @@ in Electrical Power Engineering
 at the Delft University of Technology,
 %aan de Technische Universiteit Delft,
 
-to be defended publicly on August 30, 2019 at 12:00 PM.
+to be defended on October 29, 2020 at 10:00 AM.
 %in het openbaar de verdedigen op dinsdag 1 januari om 10:00 uur.
 
-\vfill
+\vspace{25mm}
 
 \begin{tabular}{lll}
 %% Add additional information here, per faculty requirements, e.g
@@ -74,17 +74,17 @@ to be defended publicly on August 30, 2019 at 12:00 PM.
         
 \end{tabular}
 
+\vspace{35mm}
 %% Only include the following lines if confidentiality is applicable.
 \bigskip
-\bigskip
-\emph{This thesis is confidential and cannot be made public until December 31, 2021.}
+\emph{This thesis is confidential and cannot be made public until October 29, 2022.}
 %\emph{Op dit verslag is geheimhouding van toepassing tot en met 31 december 2013.}
 
 \bigskip
-\bigskip
+
 An electronic version of this thesis is available at \url{http://repository.tudelft.nl/}.
 %Een elektronische versie van dit verslag is beschikbaar op \url{http://repository.tudelft.nl/}.
-
+\vspace{15mm}
 \end{center}
 
 \end{titlepage}
